css/contacts.css
/* ... */
.help-section dd { display: table-cell; clear: right; float: left; margin: 0; padding: 0.2em; white-space: nowrap; vertical-align: text-bottom; }

/* Settings */

.contacts-settings dl { width: 100%; }
.addressbooks-settings table { width: 100%; }
.addressbooks-settings .actions { width: 100%; white-space: nowrap; }
.addressbooks-settings .actions * { float: left; }
.addressbooks-settings .actions input.name { width: 5em; }
.addressbooks-settings .actions input.name { width: 7em; }
.addressbooks-settings a.action { opacity: 0.5; }
.addressbooks-settings a.action:hover { opacity: 1; }
.addressbooks-settings td.active, .addressbooks-settings td.action { width: 20px; }

.addressbooklist .actions {
	position: absolute; right: 0px;
	display: inline-flex;
}
.addressbooklist .actions > a { width: 20px; height: 20px; }
.addressbooklist > li > div {
	display: inline-block;
	clear: both;
}

#app-settings-content {
	overflow-x: hidden;
	overflow-y: auto;
}

/* Single elements */
#file_upload_form, #file_upload_target, #import_upload_target, #crop_target { display:none; }
#import_upload_start, .import-upload-button {
    width: 30px !important; height: 30px !important;
	display:block;
	position: absolute;
	right: 0; top: 0;
	margin: 5px !important;
	cursor: pointer;
}
#import_upload_start {
	cursor: pointer;
	z-index: 1001;
}
.import-upload-button {
    background-position: center center;
    background-repeat: no-repeat;
	border: none;
    cursor: pointer;
    z-index: 100;
}

.import-upload, .import-status {
	height: 40px;
}
.import-upload select {
	width: 80%; height: 30px;
	margin: 5px;
}
.import-status {
	display: none;
}
#import-status-text {
	white-space: nowrap;
	overflow: hidden;
}
input:not([type=checkbox]).propertytype { 
	float: right;
	font-size: .8em; 
	max-width: 80px; 
	text-align: right; 
	margin: 0;
	padding-top: 8px;
}
input[type=checkbox].propertytype { width: 10px; }
.contactphoto { 
	border: 1px solid #bbb; border-radius: 3px;
	-moz-box-shadow: 0 1px 2px #777; -webkit-box-shadow: 0 1px 2px #777; box-shadow: 0 1px 2px #777;
}
.contactphoto:hover { background: #fff; cursor: default; }
#photowrapper { 
	position: absolute;
	float: left; 
	width: 180px; height: 180px;
	margin-top: 10px;
	margin-left: -145px;
}

#photowrapper .favorite {
	display: inline-block;
	float: right;
	position: absolute;
	right: -6px; top: -6px;
	width: 25px; height: 25px;
}
#photowrapper.wait { opacity: 0.6; filter:alpha(opacity=0.6); z-index:1000; cursor: wait; }
#phototools {
	position:absolute;
	bottom: 10px;
	margin: 0;
	width:auto; height: auto;
	background-color:#fff;
	list-style-type:none; border-radius: 3px;
	border: 1px solid #DDDDDD;
	/*-moz-box-shadow: 0 1px 2px #777; -webkit-box-shadow: 0 1px 2px #777; box-shadow: 0 1px 2px #777;*/
}
#phototools li { display: inline-block; }
#phototools li a {
	float:left;
	opacity: 0.6;
	width: 40px; height: 40px;
	background-position: center;
	background-size: 80%;
}
#phototools li a:hover { opacity: 0.8; }
#contactphoto_fileupload, #import_upload_start { -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; filter:alpha(opacity=0); opacity:0; z-index:1001; }

#dialog-merge-contacts .mergelist {
	margin: 10px;
}
#dialog-merge-contacts .mergelist > li {
	height: 30px;
	-webkit-transition:background-image 500ms; -moz-transition:background-image 500ms; -o-transition:background-image 500ms;  transition:background-image 500ms;
	position:relative;
	background-position: 0 .2em !important; background-repeat:no-repeat !important;
}
#dialog-merge-contacts .mergelist > li > input {
	opacity: 0;
}
#dialog-merge-contacts .mergelist > li > input:hover, #dialog-merge-contacts .mergelist > li > input:checked {
	opacity: 1;
}
#dialog-merge-contacts .mergelist > li > label {
	padding-left: 20px;
	font-weight: normal;
}
.no-svg .favorite { display: inline-block; float: left; height: 20px; width: 20px;  }

.svg .favorite { display: inline-block; float: left; height: 20px; width: 20px; background-size:contain; }

#app-content {
	top: 44px;
}

/* Contact layout */

#contact > ul > li { white-space: nowrap; margin-right: 110px; }
#contact > ul.propertylist {
	font-size: 10px;
	/*display: table;
	border-spacing: 1em;
	border: thin solid black;*/
}
#contact > ul.propertylist > li {
	display: inline-block;
	padding: 1em;
	/*display: table-cell;*/
}

.display .meta { text-align: right; margin-left: -30px; }
.display .adr {
	padding-left: 5px;
	padding-right: 5px;
	cursor: pointer;
	border: 1px solid rgb(221, 221, 221);
	border-radius: 3px;
	line-height: 28px;
}
.adr.editor {
	width: 20em;
	margin-left: 120px;
}
.adr.editor ul {
	-moz-column-count: 1;
	-webkit-columns: 1;
	-o-columns: 1;
	columns: 1;
}
fieldset.adr ul li input.label { margin-top: -4px !important; }
.adr.editor input.value.street, ul.adr.edit input.value.country, ul.adr.edit input.value.region { width: 19em;}
.adr.editor input.value.zip { width: 100px; }
.adr.editor input.value.city { width: 192px; margin:4px; }

/* contact list */

#contactsHeader {
	height: 51px;
	color: #999;
	z-index: 2;
	width: 100%;
	line-height: 50px;
}
.multiselect #contactsHeader {
    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
    left: 0;
    top: 44px;
    margin-left: 330px; padding-right: 330px;
    position: fixed;
    z-index: 10;
}
#contactsHeader > tr {
}
#contactsHeader > td {
	z-index: 300;
	border-bottom: 1px solid rgb(221, 221, 221);	
}
#contactsHeader > td.name {
	padding-right: 9px;
}
.multiselect #contactsHeader > td.name {
	width: 100%;
	display: inline-block;
	color: #000;
	background-color: rgba(220, 220, 220, 0.8);
	opacity: 0.9;
}
#contactsHeader .delete {
	background-image: none;
}
#contactsHeader .delete img {
	vertical-align: middle;
	margin-bottom: 2px;
}
/* ... */

